# lecture-ki-systeme-code

./: .gitignore  CHANGELOG.md  README.md
agents/: 01_agent.py  02_agent_mlflow.py  03_agent_mcp.py  04_skilled-agent.py  05_audio_input.py  README.md  calculator_server.py  pyproject.toml
agents/skills/my-skill/: SKILL.md
agents/skills/paper-search/: SKILL.md
agents/skills/paper-search/scripts/: arxiv_search.py
experiment-tracking/: README.md  experiment-tracking-example.ipynb  pyproject.toml
monitoring-observation/: .env.example  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
monitoring-observation/app/: Dockerfile  app.py  pyproject.toml
monitoring-observation/detector/: Dockerfile  detector.py  pyproject.toml
monitoring-observation/grafana/provisioning/dashboards/: dashboards.yaml  fastapi-service.json  litter-detection.json  system-monitor.json
monitoring-observation/grafana/provisioning/datasources/: datasources.yaml
