[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "dotenv>=0.9.9",
    "mcp>=1.27.0",
    "mlflow>=3.11.1",
    "openai>=2.31.0",
    "pydantic-ai>=1.6.0, <=1.68.0",
    "pydantic-ai-skills>=0.6.0",
    "sounddevice>=0.5.0",
    "uvicorn>=0.44.0",
]
